--- a/Latihan/Latihan1/L1c233040089.html
+++ b/Latihan/Latihan1/L1c233040089.html
@@ -1,20 +1,34 @@
 <HTml>
-        <head>
-            <title>Ini Judul</title>
-        </head>
 
-        <Body>
-         SALAM HANGAT
-         <HR>
-         <HR width="5%" size="5" align="CENTER" noshade="">
-         <HR width="10%" size="10" align="CENTER" noshade="">
-         <HR width="5%" size="5" align="CENTER" noshade="">
-         <HR width="20%" size="20" align="CENTER" noshade="">
-         <HR width="500" size="20" align="CENTER">
+<head>
+    <title>Ini Judul</title>
+</head>
 
-        Eyang poetri adalah seorang
-        <center>
+<Body>
+    SALAM HANGAT
+    <HR>
+    <HR width="5%" size="5" align="CENTER" noshade="">
+    <HR width="10%" size="10" align="CENTER" noshade="">
+    <HR width="20%" size="20" align="CENTER" noshade="">
+    <HR width="500" size="20" align="CENTER">
+
+    Eyang poetri adalah seorang
+    <center>
         Pendekar sakti dari jogja
-        </center>
-        yang gemar makan di angkringan tugu <br><br>
+    </center>
+    yang gemar makan di
+    angkringan tugu <br><br>
+
+    <B>Petuah Eyang Poetri</B><BR />
+    <I>Setiap Permasalahan Hidup</I><BR>
+    <U>Pasti ada jalan keluarnya</U><BR>
+    <i>Selalu Berfikiran Terbuka</i>
+    <B><U>Yang Penting adalah</U><BR><BR>
+        <I>Selalu berfikiran Terbuka</I></B><BR><BR>
+
+    <small>Dari kecil</small><BR>
+    lalu Menjadi sedang<BR>
+    <BIG>dan akhirnya Menjadi besar</BIG>
+</Body>
+
 </HTML>
