--- a/Latihan/Latihan1/T1233040089.html
+++ b/Latihan/Latihan1/T1233040089.html
@@ -1,8 +1,52 @@
 <html>
+
 <head>
     <title>CV nya Chandra HR</title>
 </head>
+
 <body>
-    
+    <UL>
+        <h1 align="center"> CURICULUM VITAE</h1>
+        <hr />
+        <img align="right" src="ratnik.jpg" alt="ratnik" height="150" width="150" />
+        <LI>
+            <h4>Nama: <u>CHANDRA HARKAT RAHARJA</h4></u>
+        <LI>
+            <h4>Alamat: JL.Rh Abdul Halim Gg. Masa Bhakti 2-6 No.83-84 RT-02 RW-16 KELURAHAN CIGUGUR TENGAH, KECAMATAN
+                CIMAHI TENGAH.</h4>
+        <LI>
+            <h4>No Handphone Aktif:<B>081214346617</B></h4>
+        <LI>
+            <h4>E-Mail: chandrahr118@gmail.com</h4>
+        <LI>
+            <h4>Social Media: <U><B>Telegram, WhatsApp dan Discord Only</U></B></h4>
+        <LI>
+            <h4> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">klik disini slot gacor 500%</a> </h4>
+            <H1 align="center">
+                <b><U>DESKRIPSI</U></b>
+            </H1>
+            <H3>Well... saya hanya seorang mahasiswa di fakultas teknik informatika Universitas Pasundan, Nothing much
+                really...</H3>
+    </UL>
+    <h1 align="center"><b><u>PENDIDIKAN</u></b></h1>
+    <UL>
+        <H4>
+            <LI>SD: SDN CIMAHI MANDIRI V
+            <LI>SMP: SMP AL MA'SOEM BANDUNG
+            <LI>SMA: SMA NEGERI 5 CIMAHI
+        </H4>
+        <h1 align="center"><B><U>PELATIHAN</U></B></h1>
+        <h4>
+            <ol>
+                <li>pelatihan...</li>
+            </ol>
+        </h4>
+
+        <h1 align="center"> <b><U>BAHASA PEMROGRAMAN</U></b></h1>
+        <ul>
+            <li>HTML</li>
+        </ul>
+    </UL>
 </body>
+
 </html>
