--- a/Latihan/latihan3/l3d233040089.html
+++ b/Latihan/latihan3/l3d233040089.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Latihan 3 - CSS</title>
-    <link rel="stylesheet" href="L3c233040089.css" />
+    <link rel="stylesheet" href="L3d233040089.css" />
 </head>
 
 <body>
 
     <h1>Facebook</h1>
     <h4>1 November 2023, Pukul 15.00</h4>
-    <h3><a href="http://instagram.com/chandrahr118">Oleh: Chandra Harkat</a></h3>
+    <h3> Oleh:<a href="http://instagram.com/chandrahr118"> Chandra Harkat</a></h3>
 
     <p class="p1">
         Facebook adalah sebuah layanan jejaring sosial yang diluncurkan pada bulan Februari 2004, dimiliki dan
