--- a/Latihan/latihan4/t4b233040089.html
+++ b/Latihan/latihan4/t4b233040089.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T4A</title>
-    <link rel="stylesheet" href="t4a233040089.css">
+    <title>T4B</title>
+    <link rel="stylesheet" href="t4b233040089.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="judul">My Website</h1>
+            <h1 class="judul">Victory Day!</h1>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -21,6 +21,7 @@
             </ul>
         </div>
         <div class="hero"></div>
+        <div class="hero2"></div>
         <div class="content">
             <h2>Judul Artikel</h2>
             <p class="Penulis">Ditulis Oleh <a href="#">Chandra Harkat Raharja</a>. Pada 24 Desember 2023.</p>
