--- a/Latihan/latihan5/index.html
+++ b/Latihan/latihan5/index.html
@@ -41,7 +41,7 @@
         <li>
           <a href="#gambar-3">
             <img src="./gallery/img/thumb/Russianjet2_thumb.jpg" alt="Russianjet2_thumb" />
-            <span>Another Russian Jet</span>
+            <span>Other Russian Jet</span>
           </a>
           <div class="overlay" id="gambar-3">
             <a href="#" class="close">x close</a>
